--- a/css/demo.css
+++ b/css/demo.css
@@ -41,7 +41,7 @@ li {
   text-align: center;
 }
 
-.container_12 {
+main {
   background-color: #fff;
   background-repeat: repeat-y;
   margin-bottom: 20px;
