--- a/css/960gridgridgrid.css
+++ b/css/960gridgridgrid.css
@@ -147,9 +147,10 @@ main {
 
 
 
-/* Here is how to use this framework:
-----------------------------------------------------------------------------------------------------*/
-  
+/* Here is how to use this framework:                                                                  */
+/* ----------------------------------------------------------------------------------------------------*/
+/* 
+
 If you want to place an article from line 4 to line 8, you put these classes into the HTML:
   
   <article class="grid-column-start-4 grid-column-end-8">...your article...</article>  
@@ -170,4 +171,4 @@ Plus, once the responsive version of 960 Grid Grid Grid comes out (coming soon!)
 
 <article class="smphone-grid-column-start-1 smphone-grid-column-end-2 bgphone-grid-column-start-2 bgphone-grid-column-end-4 tablet-grid-column-start-3 tablet-grid-column-end-7 bg-tablet-grid-column-start-4 bgtablet-grid-column-end-8 laptop-grid-column-start-4 laptop-grid-column-end-8 27inchiMac-grid-column-start-3 27inchiMac-grid-column-end-13">...your article...</article>  
 
-
+*/
