--- a/css/960gridgridgrid.css
+++ b/css/960gridgridgrid.css
@@ -147,13 +147,15 @@ main {
 
 
 
-/* Here is how to use this framework:                                                                  */
-/* ----------------------------------------------------------------------------------------------------*/
-/* 
+/* Here is how to use this framework:                                                                  
+ ----------------------------------------------------------------------------------------------------
+
 
 If you want to place an article from line 4 to line 8, you put these classes into the HTML:
   
-  <article class="grid-column-start-4 grid-column-end-8">...your article...</article>  
+  <article class="grid-column-start-4 grid-column-end-8">
+        ...your article...
+  </article>  
 
 If you didn't use this amazing tool, you would instead write:
 
@@ -164,11 +166,19 @@ If you didn't use this amazing tool, you would instead write:
     grid-column-end: 8;
   }
   
-That's too hard! And then when you redesigned, you could just change the CSS. You wouldn't have to completely redo all the HTML! What??
+That's too hard! And then when you redesigned, you could just change the CSS. 
+You wouldn't have to completely redo all the HTML! What??
 
 
-Plus, once the responsive version of 960 Grid Grid Grid comes out (coming soon!) you'll enjoy marking up your HTML like this:
+Plus, once the responsive version of 960 Grid Grid Grid comes out (coming soon!) 
+you'll enjoy marking up your HTML like this:
 
-<article class="smphone-grid-column-start-1 smphone-grid-column-end-2 bgphone-grid-column-start-2 bgphone-grid-column-end-4 tablet-grid-column-start-3 tablet-grid-column-end-7 bg-tablet-grid-column-start-4 bgtablet-grid-column-end-8 laptop-grid-column-start-4 laptop-grid-column-end-8 27inchiMac-grid-column-start-3 27inchiMac-grid-column-end-13">...your article...</article>  
+  <article class="smphone-grid-column-start-1 smphone-grid-column-end-2 bgphone-grid-column-start-2 
+                bgphone-grid-column-end-4 tablet-grid-column-start-3 tablet-grid-column-end-7 
+                bg-tablet-grid-column-start-4 bgtablet-grid-column-end-8 laptop-grid-column-start-4 
+                laptop-grid-column-end-8 27inchiMac-grid-column-start-3 27inchiMac-grid-column-end-13">
+        ...your article...
+  </article>  
+
 
 */
